--- a/src/view/index.html
+++ b/src/view/index.html
@@ -1,14 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<%= require( 'html-loader!./layout/html-head.html')%>
+<%= require( 'html-loader!./layout/head-common.html')%>
+<title>happmmall电商平台</title>
 </head>
-
-
-
 <body>
-<script type="text/javascript" src="https://cdn.bootcss.com/jquery/1.11.3/jquery.min.js"></script>
-<script type="text/javascript" src="../../dist/js/base.js"></script>
-<script type="text/javascript" src="../../dist/js/index.js"></script>
+<%= require( 'html-loader!./layout/nav.html')%>
+<%= require( 'html-loader!./layout/header.html')%>
+<div class="page-wrap w">
+    <%= require( 'html-loader!./layout/nav-side.html')%>
+    <div class="content with-nav">test</div>
+</div>
+
+<%= require( 'html-loader!./layout/footer.html')%>
 </body>
 </html>
