--- a/src/view/layout/nav.html
+++ b/src/view/layout/nav.html
@@ -6,7 +6,7 @@
         </span>
         <span class="user login">
             <span class="link-text js-login">欢迎,
-                <span class="usernamae"></span>
+                <span class="username"></span>
             </span>
             <span class="link js-logout">退出</span>
         </span>
