--- a/src/page/common/header/index.css
+++ b/src/page/common/header/index.css
@@ -2,7 +2,7 @@
 * @Author: ASUS
 * @Date:   2018-01-07 08:25:53
 * @Last Modified by:   ASUS
-* @Last Modified time: 2018-01-07 08:46:54
+* @Last Modified time: 2018-01-14 09:47:42
 */
 .header .logo{
     position: absolute;
@@ -12,6 +12,7 @@
     display: block;
     font-size: 36px;
     color: #c60023;
+    text-decoration: none;
 }
 
 .header .search-con{
@@ -30,4 +31,14 @@
     position: absolute;
     height: 44px;
     width: 80px;
+}
+/*面包屑导航*/
+.crumb{
+    height: 50px;
+    line-height: 50px;
+    background: #eee;
+    color: #888;
+    font-size: 14px;
+    margin-bottom: 10px;
+    border-top:2px solid #c60023;
 }
