--- a/src/page/common/nav-simple/index.css
+++ b/src/page/common/nav-simple/index.css
@@ -2,7 +2,7 @@
 * @Author: ASUS
 * @Date:   2018-01-06 10:31:25
 * @Last Modified by:   ASUS
-* @Last Modified time: 2018-01-06 10:45:21
+* @Last Modified time: 2018-01-14 09:48:12
 */
 .nav-simple{
     height: 60px;
@@ -14,5 +14,6 @@
     font-size: 26px;
     font-weight: bold;
     color: #c60023;
+    text-decoration: none;
     text-decoration: none;
 }
